# realtimex

./: .gitignore  db.sqlite3  notes.md  pyproject.toml
config/: settings.py  urls.py
core/: urls.py  views.py
graphs/: forms.py  models.py  urls.py  views.py
graphs/migrations/: 0001_initial.py
templates/: alphavantage.html  base.html  data_sources.html  graph_create.html  graph_detail.html  graph_list.html
