[tool.poetry]
name = "realtimex"
version = "0.1.0"
description = ""
authors = ["AhmedKhchai <a.khchai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.2"
channels = "^4.0.0"
djangorestframework = "^3.14.0"
htmx = "^0.0.0"
plotly = "^5.19.0"
django-tailwind = "^3.8.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
